fix(sangjun/basicfreeboard):pagination mobile position fix

--- a/src/scss/layout/boards/_basic.scss
+++ b/src/scss/layout/boards/_basic.scss
@@ -19,6 +19,7 @@
     width: 90%;
     border-spacing: 0;
     margin-top: 30px;
+    
 
     .boardlist-common-title {
         text-align: center;
@@ -151,12 +152,15 @@
 
 /* 0 ~ 960 : 테블릿1  */
 @media screen and (max-width: 960px) {
-
+    
 }
 
 /* 0 ~ 768px : 테블릿2 */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 805px) {
 
+    .pagination-container {
+        position: static;
+    }
 }
 @media screen and (max-width: 670px) {
     .boardlist-common-tables {
@@ -171,12 +175,17 @@
     .boardlist-common-write {
         width: 95%;
     }
+    
 }
 /* 모바일 */
 @media screen and (max-width: 480px) {
-
+    .boardlist-common {
+        height: 900px;
+    }
     .boardlist-common-tables .boardlist-common-title {
         width: 40%;
-   }
+    }
+   
  
 }
+
